--- a/views/createRoom.ejs
+++ b/views/createRoom.ejs
@@ -17,5 +17,5 @@
         </form>
     </div>
 </body>
-<script src="createRoom.js"></script>
+<script src="createRoom.js" type="module"></script>
 </html>
