--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -41,6 +41,6 @@
             </div>
         </div>
     </div>
-    <script src="chat.js"></script>
+    <script src="chat.js" type="module"></script>
 </body>
 </html>
