--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -18,7 +18,7 @@
             </div>
             <div id="listRooms">
                 <div id="listRoomsContent">
-                    <button id="btnListRoom">List Rooms</button>
+                    <button id="btnListRoom">Rooms</button>
                     <class class="dropdown">
                         <a href="#">Link 1</a>
                         <a href="#">Link 2</a>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div id="send">
-                <input name="file" type="file" id="inputFile">
+                <input name="file" type="file" id="inputFile" accept="image/*,.pdf,.doc,.xls,.xlsx,.zip,.rar">
                 <label for="inputFile" id="lblInputFile"><i class='bx bx-paperclip'></i></label>
                 <input id="textSend" type="text" placeholder="typing message...">
                 <button id="btnSend"><i class='bx bx-send'></i></button>
