--- a/public/style.css
+++ b/public/style.css
@@ -16,9 +16,20 @@
     margin: 5px;
     padding: 5px;
 }
+.container i{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: rgba(255, 255, 255, 0.463);
+}
 .container{
+    position: relative;
     padding: 10px;
-    background: #c2671d1d;
+    /* background: #c2671d1d; */
+    background: url('images/bg3.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     width: 300px;
@@ -36,7 +47,10 @@
     border-radius: 10px;
 }
 .wrapperRegister{
-    background: #c2671d1d;
+    background: url('images/bg3.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -95,7 +109,10 @@ h2{
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    background: #c2671d1d;
+    background: url('images/bg3.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 500px;
     border-radius: 10px;
 }
