--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
             <% } %>
             <input id="login" type="submit" value="Login">
             <input id="singup" type="button" value="Singup?">
-            <i>Copyright Vu Han</i>
+            <i>Copyright by Vu Han</i>
         </form>
     </div>
 </body>
