--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -17,11 +17,11 @@
         </form>
         <form id="danhsachRoom">
             <ul>
-                <li>room1</li>
+                <!-- <li>room1</li>
                 <li>room2</li>
                 <li>room3</li>
                 <li>room4</li>
-                <li>room5</li>
+                <li>room5</li> -->
             </ul>
         </form>
     </div>
